ghost/admin/app/styles/layouts/content.css
/* ... */
/* Mobile style of post list */
@media (max-width: 1200px) {
    .feature-memberAttribution .gh-post-list-status,
    .feature-memberAttribution .gh-post-list-metrics {
        padding-left: 0;
        padding-right: 0;
    }

    .feature-memberAttribution .gh-content-status-draft,
    .feature-memberAttribution .gh-content-status-published,
    .feature-memberAttribution .gh-content-status-scheduled,
    .feature-memberAttribution .gh-content-status-emailed {
        padding-left: 0;
        padding-right: 12px;
    }

    .gh-posts-list-item .gh-post-list-metrics {
        width: 0;
    }

    .gh-post-list-analytics .gh-post-list-metrics-container {
        display: none;
    }

    .gh-posts-list-item .gh-post-list-metrics > * {
        display: none;
    }

    .gh-post-list-updated {
        display: inline-block;
        order: 6;
        border: none;
        padding: 0 4px 20px;
        font-size: 1.3rem;
        max-width: calc((100% - 140px) * 1/4);
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .gh-post-list-author {
        display: inline-block;
        order: 7;
        border: none;
        padding: 0 4px 20px 0;
        font-size: 1.3rem;
        max-width: calc((100% - 140px) * 3/4);;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .gh-post-list-author:before {
        content: "- by";
    }

    .gh-post-headers,
    .gh-post-list-actions {
        display: none;
    }

    .gh-list-data a.gh-post-list-metrics {
        display: none;
    }

    .gh-content-email-stats-mobile {
        display: inherit;
        padding: 0 0.33em;
    }

    .gh-content-attribution-stats {
        display: none;
    }

    .gh-content-attribution-stats-mobile {
        display: inherit;
        padding: 0 0.33em;
    }

    .posts-list .gh-list-nodata,
    .pages-list .gh-list-nodata {
        display: none;
    }

    .hide-when-small {
        display: none;
    }

    .visible-when-small::first-letter{
        display: inline-block;
        text-transform: uppercase;
    }
}

@media (max-width: 800px) {
    .post-header {
        left: 0;
    }

    .post-header .gh-canvas-title {
        left: 25px;
    }

    .gh-post-list-updated {
        display: none;
    }

    .gh-post-list-author {
        max-width: calc(100% - 140px);
    }
}

@media (max-width: 430px) {
    .post-header .view-actions .gh-contentfilter {
        border-right: 1px solid var(--whitegrey-d1);
    }

    .gh-contentfilter-menu:last-of-type {
        padding-right: 8px;
    }

    .gh-post-list-title {
        flex: 1 1 auto;
        max-width: 100%;
        overflow: hidden;
        padding-right: 0;
    }

    .gh-post-list-metrics-container a {
        padding: 0!important;
    }

}

@media (min-width: 901px) {
    .gh-posts-list-item a:after {
        display: none;
    }
}


/* Empty State
/* ---------------------------------------------------------- */
.no-posts {
    background: none;
    box-shadow: none;
    border: none !important;
}

.no-posts + .infinity-loader {
    padding: 0 !important;
}

.no-posts-box {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    padding: 0 0 24px;
    height: calc(100vh - 200px);
}

.no-posts-box .no-posts {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: -32px;
}

.no-posts-box .no-posts h4 {
    margin: 32px 0;
}


/* Keyboard Focus Effects
/* ---------------------------------------------------------- */


/* This has to be a pseudo element to sit over the top of everything else in the content list */
.tag-list-content.keyboard-focused:before,
.tag-settings.keyboard-focused:before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 500;
    animation: keyboard-focus-style-fade-out 1.5s 1 forwards;
    pointer-events: none;
}


/* Post analytics
/* --------------------------------------------------------- */

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
}

.gh-loading-spinner-outer {
    width: 100%;
    height: 150px;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    animation: .25s fadeIn .5s normal forwards;
}

.gh-post-analytics-header .gh-canvas-header-content {
    padding-bottom: 1.6rem;
    border-bottom: 1px solid var(--whitegrey);
}

.gh-canvas-title.gh-post-title {
    max-width: 880px;
    padding: 0;
    font-size: 2.8rem;
    line-height: 1.2em;
    overflow: inherit;
    white-space: inherit;
}

.post-header .gh-canvas-title.gh-post-title {
    display: block;
    padding: 0;
    overflow: hidden;
    white-space: initial;
}

@media (max-width: 1280px) {
    .post-header .gh-canvas-title.gh-post-title {
        white-space: nowrap;
        padding-top: 8px;
    }
}

.gh-post-analytics-meta {
    width: 100%;
    margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.gh-post-analytics-meta-text {
    color: var(--midgrey-l2);
    font-size: 1.3rem;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.gh-posts-list-item:nth-of-type(2) .gh-list-data {
    border-top: var(--whitegrey) 1px solid;
}

.gh-content-entry-title {
    margin: 0 0 2px;
    font-size: 1.4rem;
    font-weight: 600;
}

.gh-content-entry-meta,
.gh-content-entry-status {
    max-width: max-content;
    font-size: 1.3rem;
    color: #99a3ad;
}

.gh-content-entry-meta .gh-badge {
    margin-right: 3px;
}

.gh-content-entry-status .draft {
    display: flex;
    align-items: center;
    color: var(--pink);
    font-weight: 500;
}

.gh-content-entry-status .scheduled {
    display: flex;
    align-items: center;
    color: var(--green);
    font-weight: 500;
}
/* ... */

